--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,11 @@ jobs:
         with:
           version: v3.4.0
 
+      - name: Add helm repos
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add ssi https://my-digi-id.github.io/ssi-helm-charts/
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         env:
