update aca-py chart

--- a/charts/ssi-aca-py/templates/credentials-job.yaml
+++ b/charts/ssi-aca-py/templates/credentials-job.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.isIssuer }}
+{{- if and .Values.schemaId .Values.credentialName }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -105,8 +106,5 @@ spec:
           fi
           echo "Revocation Registry ID: $REVOCATION_REGISTRY_ID" 
 
-     
+{{- end }}     
 {{- end }}
-
-
-
