--- a/charts/ssi-tails-server/templates/persistentvolumeclaim.yaml
+++ b/charts/ssi-tails-server/templates/persistentvolumeclaim.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-{{include "ssi-tails-server.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  storageClassName: {{ .Values.volumeSettings.storageClassName | default "default" }}
+  storageClassName: {{ .Values.volumeSettings.storageClassName | default "" }}
   accessModes:
-    - ReadWriteMany
+    - {{ .Values.volumeSettings.accessModes | default "ReadWriteOnce" }}
   resources:
     requests:
       storage: {{ .Values.volumeSettings.storageCapacity | default "5Gi" }}
