Aca-py endpoint construction checks for ingress settings

--- a/charts/ssi-aca-py/templates/deployment.yaml
+++ b/charts/ssi-aca-py/templates/deployment.yaml
@@ -53,7 +53,11 @@ spec:
           - name: ACAPY_LABEL
             value: {{ .Values.agentName }}
           - name: ACAPY_ENDPOINT
+          {{- if .Values.ingress.enabled }}
+            value: {{ if .Values.ingress.tls }}https{{ else }}http{{ end }}://{{ .Values.ingress.subdomainPrefix}}indy.{{ .Values.ingress.host }}
+          {{- else }}
             value: http://{{ include "ssi-aca-py.fullname" . }}:11000
+          {{- end }}
           - name: ACAPY_ADMIN
             value: "0.0.0.0 11080"
           - name: ACAPY_INBOUND_TRANSPORT
